--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,10 @@ uvicorn[standard]>=0.24.0
 jinja2>=3.1.0
 python-multipart>=0.0.6
 pydantic>=2.5.0
+starlette>=0.27.0
 
 # Base de datos
-sqlite3
+# sqlite3 ya viene con Python
 psycopg2-binary  # Para PostgreSQL en producción
 
 # Utilidades adicionales
